# testrail-api

./: .editorconfig  .gitignore  .travis.yml  LICENSE  Pipfile  README.md  build.sh  pyproject.toml  readme.rst  ruff.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: python-package.yml  python-publish.yml
testrail_api/: __init__.py  __version__.py  _api_client.py  _category.py  _enums.py  _exception.py  _session.py  _testrail_api.py
tests/: README.md  conftest.py  pytest.ini  test_attachments.py  test_bdds.py  test_case_fields.py  test_case_types.py  test_cases.py  test_configurations.py  test_datasets.py  test_dynamic_filter_fields.py  test_groups.py  test_labels.py  test_milestone.py  test_other.py  test_plans.py  test_priorities.py  test_projects.py  test_reports.py  test_result_fields.py  test_results.py  test_roles.py  test_runs.py  test_sections.py  test_shared_steps.py  test_statuses.py  test_suites.py  test_template.py  test_tests.py  test_users.py  test_variables.py
tests/real/: README.md  conftest.py  pytest.ini  test_cases.py
tests/unit/: conftest.py  pytest.ini  test_attachments.py  test_case_fields.py  test_case_types.py  test_cases.py  test_configurations.py  test_milestone.py  test_other.py  test_plans.py  test_priorities.py  test_projects.py  test_reports.py  test_result_fields.py  test_results.py  test_runs.py  test_sections.py  test_statuses.py  test_suites.py  test_template.py  test_tests.py  test_users.py
